# atui

./: .prettierrc  1  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  Sytle.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/data/: callrelated.json  general.json  hardware.json  networkservice.json  packetdomain.json  phonebook.json  shortmessageservice.json  status.json  supplementary.json  usim.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  serial.rs
src-tauri/src/mocks/: command.rs
src-tauri/src/modem/: serial.rs
src/Commands/: general.json  status.json  usim.json
src/Components/: Card.tsx  Left.tsx  Main.tsx  Right.tsx  Theme.tsx
src/Components/Command/: General.tsx  Status.tsx  USim.tsx
src/Components/LeftSidebar/: DeviceStatus.tsx  NetworkStatus.tsx  PortSelector.tsx  index.tsx
src/Components/RightSidebar/: CommandInput.tsx  LogView.tsx  index.tsx
src/Hooks/: Command.tsx
src/Stores/: Command.tsx  DeviceStatus.tsx  Theme.tsx
src/Utils/Parsers/: ATI.tsx
