[package]
name = "atui"
version = "0.1.0"
description = "A Tauri App for Sending AT Commands"
authors = ["vraushanraja@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "atui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = { version = "1.9.0", features = ["serde"] }
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
tokio-serial = { version = "5.4.4", features = ["bytes", "codec"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["serde", "v4", "v7"] }

